--- a/result/2022-06-22.md
+++ b/result/2022-06-22.md
@@ -48,4 +48,5 @@
 48. [总算把夏天的快乐玩明白了](https://s.weibo.com//weibo?q=%23%E6%80%BB%E7%AE%97%E6%8A%8A%E5%A4%8F%E5%A4%A9%E7%9A%84%E5%BF%AB%E4%B9%90%E7%8E%A9%E6%98%8E%E7%99%BD%E4%BA%86%23&Refer=top) 39513
 49. [汪顺200混晋级半决赛](https://s.weibo.com//weibo?q=%23%E6%B1%AA%E9%A1%BA200%E6%B7%B7%E6%99%8B%E7%BA%A7%E5%8D%8A%E5%86%B3%E8%B5%9B%23&Refer=top) 37704
 50. [小学生春游综合症](https://s.weibo.com//weibo?q=%23%E5%B0%8F%E5%AD%A6%E7%94%9F%E6%98%A5%E6%B8%B8%E7%BB%BC%E5%90%88%E7%97%87%23&Refer=top) 18733
-51. [2条河流发生超保洪水](https://s.weibo.com//weibo?q=%232%E6%9D%A1%E6%B2%B3%E6%B5%81%E5%8F%91%E7%94%9F%E8%B6%85%E4%BF%9D%E6%B4%AA%E6%B0%B4%23&Refer=top) 9871
+51. [2条河流发生超保洪水](https://s.weibo.com//weibo?q=%232%E6%9D%A1%E6%B2%B3%E6%B5%81%E5%8F%91%E7%94%9F%E8%B6%85%E4%BF%9D%E6%B4%AA%E6%B0%B4%23&Refer=top) 12251
+52. [120三次回拨电话指导抢救垂危老人](https://s.weibo.com//weibo?q=%23120%E4%B8%89%E6%AC%A1%E5%9B%9E%E6%8B%A8%E7%94%B5%E8%AF%9D%E6%8C%87%E5%AF%BC%E6%8A%A2%E6%95%91%E5%9E%82%E5%8D%B1%E8%80%81%E4%BA%BA%23&Refer=top) 9596
